# Oisko-t-it-

./: .gitignore  LICENSE  README.MD  SETUP_GUIDE.md  docker-compose.yml  test_live_backend.sh
backend/: .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 20240101000000_create_users_table.sql  20260116000000_create_applications_table.sql  20260116000001_add_email_verification_to_users.sql  20260116000002_create_visitors_table.sql  20260116000003_add_company_website.sql  20260116000004_add_file_paths.sql  20260116000005_create_comments_table.sql  20260116000006_add_logo_and_description.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/models/: application.rs  comment.rs  event.rs  mod.rs  public_application.rs  user.rs  visitor.rs
backend/src/routes/: applications.rs  auth.rs  contact.rs  intel.rs  mod.rs  upload.rs  visitor.rs
docs/: STYLE_GUIDE.md
frontend/: Cargo.toml  Dioxus.toml  Dockerfile  index.html  nginx.conf
frontend/assets/: main.css  tailwind.css
frontend/src/: main.rs
frontend/src/components/: charts.rs  data_counter.rs  kanban_board.rs  mod.rs  sector_map.rs  terminal_text.rs
frontend/src/models/: application.rs  event.rs  mod.rs  visitor.rs
frontend/src/pages/: admin_login.rs  admin_register.rs  application_detail.rs  contact.rs  login.rs  mod.rs  verify_email.rs
frontend/src/pages/admin/: application_create.rs  application_edit.rs  applications_list.rs  dashboard.rs  layout.rs  mod.rs
frontend/src/services/: application_service.rs  mod.rs  sse_service.rs
