[package]
name = "frontend"
version = "0.1.0"
authors = ["mainm0e <mainm0e1996@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dioxus-logger = "0.5.1"
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["serde", "v4", "js"] }
chrono = { version = "0.4.43", features = ["serde", "wasmbind"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
rand = "0.9.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
const_format = "0.2.35"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Reduce parallelization for better optimization
debug = 0           # Explicitly disable debug info to avoid wasm-opt DWARF errors
# Removed strip = true as it conflicts with Dioxus CLI's internal bundler
